# planktonzilla

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy-space.yml
.planning/: PROJECT.md  REQUIREMENTS.md  STATE.md  config.json
.planning/quick/260512-u20-restructure-readme-md-for-v1-milestone/: 260512-u20-PLAN.md  260512-u20-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
configs/: gen_planktonzilla.yaml  generate_planktonzilla.yaml  import_dataset.yaml  train.yaml  update_planktonzilla.yaml
configs/augmentation/: autoaugment.yaml  clip_aug.yaml  default.yaml  manual.yaml  randaugment.yaml  trivialaugment.yaml
configs/custom_loss/: asymmetric.yaml  focal.yaml  ral.yaml
configs/dataset_import/: default.yaml  global_uvp5net.yaml  isiisnet.yaml  jedi_oceans_cpics.yaml  medplanktonset.yaml  planktonset1.yaml  planktoscope.yaml  syke_ifcb_2022.yaml  sykezooscan2024.yaml  zoocamnet.yaml
configs/experiment/: default.yaml  test.yaml
configs/hydra/launcher/: test.yaml
configs/model/: default.yaml  default_clip.yaml  eva02-large-clip-224-2b-s4b-b131k.yaml  vit-base-clip-224-openai.yaml
configs/tracking/: default.yaml
configs/training_arguments/: default.yaml  test_minirun.yaml
dataset_generation/: extract_cox.py  extract_taxon_ids.py  gen_planktonzilla.py  gen_planktonzilla_only_plankton.py  save_planktonzilla_for_clip.py  update_planktonzilla.py
deploy/: README.md  deploy_space.py
docs/: baseline.json  baseline_post.json  open_clip_audit.md
notebooks/: 01. Metrics_paper.ipynb  02. Sampling_world_map.ipynb  mod_planktonzilla_orane.py
ood_planktonzilla/: .gitignore  main.py
ood_planktonzilla/ood_detection/core/: engine.py
ood_planktonzilla/ood_detection/datasets/: loaders.py
ood_planktonzilla/ood_detection/methods/: custom_detectors.py
planktonzilla/: __init__.py  app.py  clip_model.py  dataset.py  loss.py  train.py  train_node.py
planktonzilla/clip_train/: __init__.py  main.py  train.py
planktonzilla/dataset_generation/: __init__.py  constants.py  extract_cox.py  extract_taxon_ids.py  gen_planktonzilla.py  gen_planktonzilla_only_plankton.py  save_planktonzilla_for_clip.py  update_planktonzilla.py
planktonzilla/dataset_generation/utils/: extract_cox.py  extract_taxon_ids.py
planktonzilla/dataset_import/: __init__.py  dataset_importer.py  import_dataset.py
planktonzilla/explorer/: __init__.py  data_access.py  geomap.py  hierarchy.py  sankey.py  shapes.py  taxonomy_explorer.py
planktonzilla/explorer/data/: inferred_dataset_locations.csv
planktonzilla/open_clip_ext/: __init__.py  _introspection.py  factory.py  transform.py  visual.py
planktonzilla/open_clip_ext/model_configs/: README.md
planktonzilla/planktonzilla_dataset/: __init__.py  constants.py  gen_planktonzilla_only_plankton.py  generate_planktonzilla.py  generate_sankey.py  planktonzilla_taxonomy.csv  save_planktonzilla_for_clip.py  update_planktonzilla.py
planktonzilla/planktonzilla_dataset/utils/: KNOWN_ISSUES.md  extract_cox.py  extract_taxon_ids.py
planktonzilla/utils/: __init__.py  hydra.py  logger.py  resolvers.py  rich_utils.py
scripts/: extract_baseline.py  push_dataset.sh  push_planktonzilla.sh  save_plankt.sh  smoke_clip.sh  smoke_clip_ci.sh  train.sh  train_clip.sh  train_ood.sh  update_planktonzilla.sh
supreme_planktonzilla/: .gitignore  README.md  conftest.py  main.py  oar_baseline.sh  oar_kmeans.sh  oar_optuna_optimizer.sh  oar_parallel_eval.sh  oar_train.sh
supreme_planktonzilla/config/: .gitignore  supreme_default.yaml
supreme_planktonzilla/scripts/: fs_selection.py  optimize_hyperparams.py
supreme_planktonzilla/supreme/: __init__.py  baselines.py  config.py  data.py  evaluate.py  evaluate_parallel.py  losses.py  model.py  prototypes.py  scores.py  train.py
supreme_planktonzilla/tests/: __init__.py  test_config.py  test_datasets.py  test_io.py  test_logger.py  test_losses.py  test_metricas.py  test_scores.py
supreme_planktonzilla/utils/: __init__.py  datasets.py  io.py  logger.py  metricas.py  transforms.py
tests/: conftest.py  shared.py  test_app_compose.py  test_dataset_generation.py  test_dependency_isolation.py  test_explorer_data_access.py  test_explorer_geomap.py  test_explorer_hierarchy.py  test_explorer_sankey.py  test_explorer_shapes.py  test_gen_planktonzilla_hydra.py  test_gen_planktonzilla_lensless_e2e.py  test_hydra_resolvers.py  test_loss.py  test_open_clip_ext.py  test_taxonomy_explorer.py  test_train.py  test_update_planktonzilla_hydra.py
tools/: generate_sankey.py  taxonomy_explorer.py
