[project]
name = "planktonzilla"
version = "0.1.1"
description = "Deep learning methods for plankton identification"
authors = [{ name = "Inria Chile", email = "info@inria.cl" }]
license = "MIT"
readme = "README.md"
keywords = ["deep learning", "computer vision", "plankton images"]
requires-python = ">=3.11,<3.14"

dependencies = [
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "hydra-submitit-launcher>=1.2.0",
    "evaluate>=0.4.6",
    "datasets>=4.4.0",
    "transformers[sentencepiece]>=5.3.0",
    "wandb>=0.22.2",
    "tqdm>=4.67.1",
    "torchvision>=0.23.0",
    "open-clip-torch>=3.3.0,<4.0.0",
    "pyrootutils>=1.0.4",
    "rich>=14.2.0",
    "accelerate>=1.10.1",
    "timm>=1.0.20",
    "scikit-learn>=1.7.2",
    "humanize>=4.13.0",
    "peft>=0.18.1",
    "plotext>=5.3.2",
    "trackio>=0.18.0",
    "regex",
    "ftfy",
    "huggingface-hub",
    "safetensors",
    "webdataset>=0.2.5,<0.2.9",
    "pandas",
    "fsspec",
    "polars>=1.41.2",
    "requests>=2.34.2",
    "joblib>=1.5.3",
    "biopython>=1.87",
    "orjson>=3.11.9",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
]

[project.urls]
homepage = "https://oceania.inria.cl/"
repository = "https://github.com/Inria-Chile/deep_plankton"
"Bug Tracker" = "https://github.com/Inria-Chile/deep_plankton/issues"

[project.scripts]
pz_import_dataset = 'planktonzilla.dataset_import.import_dataset:main'
pz_train = 'planktonzilla.train:main'
pz_gen_planktonzilla = 'planktonzilla.dataset_generation.gen_planktonzilla:main'

[dependency-groups]
dev = ["pytest", "notebook", "ipywidgets", "pytest-cov", "ipykernel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["planktonzilla"]

[tool.hatch.build.targets.wheel.force-include]
"configs" = "configs"

[tool.ruff]
line-length = 128
lint.select = [
    "F",    # Pyflakes
    "E",    # Pycodestyle
    "W",
    "I",    # isort
    "N",    # pep8-naming
    "NPY",  # NumPy-specific rules
    "PERF", # Perflint
    "FURB", # refurb
    "PD",   # pandas-vet
    "RUF",  # Ruff-specific rules
]
lint.ignore = ["E402", "N806"]
exclude = [
    "notebooks/", # do not check notebooks
]

[tool.pytest.ini_options]
# --doctest-modules removed: no doctests in planktonzilla/; testpaths=["tests"] alone is the gate. (INFRA-01, CONCERNS #13)
addopts = "--log-cli-format='%(asctime)s [%(levelname)7s] %(message)s (%(filename)s:%(lineno)s)' --log-cli-date-format='%Y-%m-%d %H:%M:%S'"
junit_family = "xunit2"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
norecursedirs = ".venv"
